start write media css

--- a/Organick.html
+++ b/Organick.html
@@ -6,32 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Organick</title>
     <link rel="stylesheet" href="./Styles/style.css">
+    <link rel="stylesheet" href="./Styles/media.css">
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="container">
-            <div class="header__block-info">
-                <img src="./Images/svg/logotype.svg" alt="logotype">
-                <nav class="header-nav">
-                    <ul>
-                        <li><a href="#">Home</a> </li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">Pages</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="block-backet">
-                <div class="block-backet__img">
-                    <img src="./Images/svg/basket.svg" alt="backet">
+            <div class="header-blocks">
+                <div class="header__block-info">
+                    <img src="./Images/svg/logotype.svg" alt="logotype">
+                    <nav class="header-nav">
+                        <ul>
+                            <li><a href="#">Home</a> </li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Shop</a></li>
+                            <li><a href="#">Pages</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </nav>
                 </div>
-                <a href="#">Cart 0</a>
+                <div class="block-backet">
+                    <div class="block-backet__img">
+                        <img src="./Images/svg/basket.svg" alt="backet">
+                    </div>
+                    <a href="#">Cart 0</a>
+                </div>
             </div>
         </div>
-    </header>
-    <main>
+    </header> -->
+     <main>
         <section class="block-welcome">
             <div class="container">
                 <div class="block-welcome__container">
@@ -72,7 +75,7 @@
                 </div>
             </div>
         </section>
-        <section class="block-organick">
+      <!--  <section class="block-organick">
             <div class="container">
                 <div class="container-organick">
                     <img src="./Images/png/image_citrus.png" alt="image_citrus">
@@ -419,12 +422,56 @@
                     </form>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer>
+    <!-- <footer>
         <section class="block-footer">
             <div class="container">
                 <div class="container-footer">
+                    <div class="block-contact">
+                        <div class="block-content">
+                            <h3>Contact Us</h3>
+                            <ul>
+                                <li>
+                                    <h4>Email</h4>
+                                    <p>needhelp@organick.com</p>
+                                </li>
+                                <li>
+                                    <h4>Phone</h4>
+                                    <p>123 (1254) 1452</p>
+                                </li>
+                                <li>
+                                    <h4>Address</h4>
+                                    <p>88 Road, Brooklyn Street, USA</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="line"></div>
+                    </div>
+                    <div class="block-socials-links">
+                        <img src="./Images/svg/logotype.svg" alt="logotype">
+                        <p>We are a popular and farming company aspiring to be a leader in the Organic food industry.
+                        </p>
+                        <div class="social-icons">
+                            <div><img src="./Images/svg/social-facebook.svg" alt="facebook"></div>
+                            <div><img src="./Images/svg/social-twitter.svg" alt="twitter"></div>
+                            <div><img src="./Images/svg/social-instagram.svg" alt="instagram"></div>
+                            <div><img src="./Images/svg/social-pinterest.svg" alt="pinterest"></div>
+                        </div>
+                    </div>
+                    <div class="block-pages">
+                        <div class="line"></div>
+                        <div class="block-content">
+                            <h3>Utility Pages</h3>
+                            <ul>
+                                <li><a href="#">Style Guide</a></li>
+                                <li><a href="#">Protected</a></li>
+                                <li><a href="#">Page Not Found</a></li>
+                                <li><a href="#">Changelog</a></li>
+                                <li><a href="#">Licenses</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -434,7 +481,7 @@
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
