add adaptive for products and customer blocks

--- a/Organick.html
+++ b/Organick.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </section>
-      <!--  <section class="block-organick">
+        <section class="block-organick">
             <div class="container">
                 <div class="container-organick">
                     <img src="./Images/png/image_citrus.png" alt="image_citrus">
@@ -162,8 +162,6 @@
                                     <img src="./Images/svg/star.svg" alt="star">
                                 </div>
                             </div>
-
-
                         </div>
                         <div class="card-product">
                             <p class="card-product__chapter">Millets</p>
@@ -247,7 +245,7 @@
                 </div>
             </div>
         </section>
-        <section class="block-customer">
+       <section class="block-customer">
             <div class="container">
                 <div class="container-customer">
                     <p class="pre-title">Testimonial</p>
@@ -298,7 +296,7 @@
                 </div>
             </div>
         </section>
-        <section class="block-offer">
+        <!-- <section class="block-offer">
             <div class="container">
                 <div class="container-offer">
                     <div class="header-offer">
