add: adaptive for all blocks

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="block-offer">
+         <section class="block-offer">
             <div class="container">
                 <div class="container-offer">
                     <div class="header-offer">
@@ -418,9 +418,9 @@
                     </form>
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
-    <!-- <footer>
+     <footer>
         <section class="block-footer">
             <div class="container">
                 <div class="container-footer">
@@ -472,12 +472,12 @@
             </div>
         </section>
         <div class="container iframe">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6814121.013040505!2d-102.70311136313804!3d45.47308973711049!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sby!4v1687025189512!5m2!1sru!2sby"
-                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d5715708.513924189!2d-103.3636567!3d45.6131901!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sby!4v1687508006118!5m2!1sru!2sby" 
+            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
