--- a/index.html
+++ b/index.html
@@ -10,12 +10,22 @@
 </head>
 
 <body>
-    <!-- <header>
+     <header>
         <div class="container">
             <div class="header-blocks">
-                <div class="header__block-info">
-                    <img src="./Images/svg/logotype.svg" alt="logotype">
+                    <div class="block-logotype">
+                        <img src="./Images/svg/logotype_without-name.svg" alt="logotype">
+                        <h2>Organick</h2>
+                    </div>
                     <nav class="header-nav">
+                        <input type="checkbox" class="check" id="checked">
+                        <label class="block-nav" for="checked">
+                            <label class="block-nav-bar" for="checked" >
+                                <span class="bar top"></span>
+                                <span class="bar middle"></span>
+                                <span class="bar bottom"></span>
+                            </label>
+                        </label>
                         <ul>
                             <li><a href="#">Home</a> </li>
                             <li><a href="#">About Us</a></li>
@@ -23,17 +33,16 @@
                             <li><a href="#">Pages</a></li>
                             <li><a href="#">Contact Us</a></li>
                         </ul>
+                        <div class="block-backet">
+                            <div class="block-backet__img">
+                                <img src="./Images/svg/basket.svg" alt="backet">
+                            </div>
+                            <a href="#">Cart 0</a>
+                        </div>
                     </nav>
-                </div>
-                <div class="block-backet">
-                    <div class="block-backet__img">
-                        <img src="./Images/svg/basket.svg" alt="backet">
-                    </div>
-                    <a href="#">Cart 0</a>
-                </div>
             </div>
         </div>
-    </header> -->
+    </header>
      <main>
         <section class="block-welcome">
             <div class="container">
