replace: img logo to block logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="header-blocks">
                     <div class="block-logotype">
-                        <img src="./Images/svg/logotype_without-name.svg" alt="logotype">
+                        <img src="./Images/svg/logotype.svg" alt="logotype">
                         <h2>Organick</h2>
                     </div>
                     <nav class="header-nav">
@@ -454,7 +454,10 @@
                         <div class="line"></div>
                     </div>
                     <div class="block-socials-links">
-                        <img src="./Images/svg/logotype.svg" alt="logotype">
+                        <div class="block-logotype">
+                            <img src="./Images/svg/logotype.svg" alt="logotype">
+                            <h2>Organick</h2>
+                        </div>                        
                         <p>We are a popular and farming company aspiring to be a leader in the Organic food industry.
                         </p>
                         <div class="social-icons">
